fix content spacing

--- a/styles/custom/articles/card.module.scss
+++ b/styles/custom/articles/card.module.scss
@@ -30,7 +30,8 @@
       font-family: VictorMono;
       font-size: 1.3em;
       color: $dark-text;
-      height: 2.6em;
+      height: 100%;
+      min-height: 4.2em;
     }
 
     p {
