--- a/styles/custom/articles/content.module.scss
+++ b/styles/custom/articles/content.module.scss
@@ -14,7 +14,7 @@
     color: $dark-text;
     font-family: VictorMono;
     font-weight: 900 !important;
-    margin-bottom: 0.5em;
+    margin: 1em auto;
   }
 
   h1 { font-size: $header; }
@@ -30,12 +30,12 @@
     font-size: 1.1em;
     color: #555;
     letter-spacing: 1px;
-    margin-bottom: 0.5em;
+    margin: 1em auto;
   }
 
   img {
     height: 100%;
-    max-height: 30rem;
+    width: 100%;
     // box-shadow: 0px 4px 4px 3px rgba(0,0,0,0.05);
     box-sizing: border-box;
     display: block;
@@ -57,7 +57,7 @@
   }
 
   blockquote {
-    padding: 1.25em;
+    padding: 1.25em 2em;
     box-sizing: border-box;
     position: relative;
     margin: 1em auto;
@@ -67,7 +67,7 @@
       position:absolute;
       left: 0;
       top: 0;
-      height: 3.5em;
+      height: 100%;
       width: 4px;
       background-color: $primary-color;
     }
@@ -80,6 +80,7 @@
   li {
     font-family: Poppins, 'Courier New', Courier, monospace;
     color: #555;
+    font-size: 1.1em;
   }
 
 }
